--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3382,7 +3382,7 @@
    "sourceType": "notebook"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "mllib",
    "language": "python",
    "name": "python3"
   },
